Update and rename landingpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="mt-5 d-flex justify-content-center align-middle container-fluid">
         <div class="text-light text-center fs-1 align-middle fw-semibold" style="margin-top: 25%;">
             <p>Your Trusted <span class="text-primary">IT Partner</span></p>
-            <div ><a href="index.html"><button class="btn btn-outline-primary btn-lg rounded-3">Discover More</button></a></div>
+            <div ><a href="index1.html"><button class="btn btn-outline-primary btn-lg rounded-3">Discover More</button></a></div>
         </div>
     </section>
 
