--- a/index1.html
+++ b/index1.html
@@ -65,7 +65,7 @@
         <img
           src="img/dylan.jpg"
           alt="Chiharu Shida"
-          width="350px;"
+          width="30%;"
           class="rounded-circle"
         />
     <!-- Akhir Jumbotron -->
