--- a/index1.html
+++ b/index1.html
@@ -61,7 +61,7 @@
 <!-- Section Home -->
     <section class="mt-5 d-flex justify-content-center" id="home">
     <!-- Jumbotron -->
-    <div class="jumbotron text-start d-flex justify-content-center " style="padding-top:85px;">
+    <div class="jumbotron text-start d-flex" style="padding-top:85px;">
         <img
           src="img/dylan.jpg"
           alt="Chiharu Shida"
